--- a/cd/tenants/ui/gitrepo.yaml
+++ b/cd/tenants/ui/gitrepo.yaml
@@ -8,7 +8,7 @@ spec:
   insecureSkipTLSVerify: false
   paths:
     - /cd
-  repo: https://github.com/dbones/demo-ui
+  repo: https://github.com/dbones/demo-ui.git
   targets:
     - clusterSelector:
         matchExpressions:
